--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,14 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "devDependencies": {
+    "@nuxt/devtools": "latest",
+    "@nuxt/ui": "^2.13.0",
+    "@samk-dev/nuxt-vcalendar": "^1.0.3",
+    "nuxt": "^3.10.1"
+  },
   "dependencies": {
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "@iconify-json/fluent": "^1.1.54",
+    "date-fns": "^3.6.0"
   }
 }
