--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.13.0",
     "@samk-dev/nuxt-vcalendar": "^1.0.3",
-    "nuxt": "^3.10.1"
+    "nuxt": "^3.10.1",
+    "nuxt-graphql-client": "^0.2.34"
   },
   "dependencies": {
     "@iconify-json/fluent": "^1.1.54",
