DevOps and Backend: Add network to compose and add health check to backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,8 @@ RUN yarn global add pnpm
 WORKDIR /app
 COPY package.json pnpm-lock.yaml ./
 
+RUN apk --no-cache add curl
+
 RUN pnpm install
 
 COPY . .
