--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@iconify-json/fluent": "^1.1.54",
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "zod": "^3.23.8"
   }
 }
